# eurobot_ros_ws

./: .clang-format  .gitmodules  readme.md  rename_RPI_USB_ports.sh  sync_time_ssh.bash
docker/: Dockerfile  run.sh
rviz/: lidar.rviz  lidar_nav.rviz
src/cup_layer/: CMakeLists.txt  costmap_plugins.xml  package.xml
src/cup_layer/include/cup_layer/: cup_layer.h  cup_layer_2.h  cup_layer_2_old.h
src/cup_layer/src/: cup_layer.cpp  cup_layer_2.cpp  cup_layer_2_old.cpp  cup_publisher.cpp  cup_server.cpp
src/cup_layer/srv/: cup_state.srv
src/eurobot/: CMakeLists.txt  package.xml
src/eurobot/launch/: rosbag_play.launch  stage.launch
src/eurobot/launch/localization/: dual_ekf.launch  ekf.launch  lidar_G6.launch  lidar_S2.launch  lidar_localization.launch  linktrack.launch  localization.launch  teleop.launch
src/eurobot/launch/navigation/: dwa_local_planner.launch  map.launch  teb_local_planner.launch
src/eurobot/launch/templates/: ekf_template.launch  nav_template.launch
src/eurobot/maps/: beacon.yaml  map.pgm  map.yaml  wall.yaml
src/eurobot/params/: dual_ekf_navsat_example.yaml  imu_calib.yaml
src/eurobot/params/localization/: amcl_params.yaml  ekf_global.yaml  ekf_template_global.yaml  lidar_localization_params.yaml  linktrack.yaml
src/eurobot/params/navigation/: global_planner_params.yaml  move_base_params.yaml
src/eurobot/src/: nlink_tagframe_converter.cpp  obstacle_msg_publisher.cpp  odom_pub.cpp
src/eurobot/stage/: beacon.world  robot.inc
src/eurobot_imu_tools/eurobot_imu_calib/: CMakeLists.txt  package.xml
src/fake_odom/: CMakeLists.txt  package.xml
src/fake_odom/include/fake_odom/: fake_odom.h
src/fake_odom/launch/: fake_odom.launch
src/fake_odom/src/: fake_odom.cpp  teleop.py
src/fake_odom/src/nodes/: fake_odom_node.cpp
(+21 files in other folders)
