<?xml version="1.0"?>
<package format="2">
  <name>fake_odom</name>
  <version>0.0.0</version>
  <description>The template package</description>
  <maintainer email="paul@todo.todo">paul</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>

  <export> </export>
</package>
